# fsqa

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  LICENSE  LICENSE.md  pyproject.toml  requirements.txt  tox.ini
docs/source/: conf.py  index.md  index.rst
fsqa/: config.py  freesurfer.py  fsqa.py  reports.py
fsqa/cli/: parser.py  run.py
src/fsqa/: __init__.py  config.py  freesurfer.py  reports.py
src/fsqa/cli/: parser.py  run.py
src/fsqa/data/: individual.html
tests/: conftest.py  test_freesurfer.py  test_fsqa.py  test_reports.py
