[tool.poetry]
name = "fsqa"
version = "0.1.0"
description = ""
authors = ["Lezlie Espana <lespana@mcw.edu>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
