[tool.poetry]
name = "fsqa"
version = "0.1.0"
description = ""
authors = ["Lezlie Espana <lespana@mcw.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.20.0"
scriv = {extras = ["toml"], version = "^1.0.0"}
Sphinx = {extras = ["toml"], version = "^5.3.0"}
mypy = "^0.991"
pylint = "^2.15.9"
myst-nb = "^0.17.1"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.1"
coverage = "^7.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
